crates/math-core/tests/snapshots/conversion_test__tag_with_non_number.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align}x\\tag{A1}\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>x</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(A1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
