crates/math-core/tests/snapshots/conversion_test__tag_with_zero.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align} x \\tag{0} \\\\ y \\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>x</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(0)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>y</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
