crates/math-core/tests/snapshots/conversion_test__text.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{hi}xx"
---
<math>
    <mtext>hi</mtext>
    <mi>x</mi>
    <mi>x</mi>
</math>
