crates/math-core/tests/snapshots/conversion_test__text_greek_direct_input.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{Γγ}"
---
<math>
    <mtext>Γγ</mtext>
</math>
