crates/math-core/tests/snapshots/conversion_test__text_html_escape.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{<\\&>}"
---
<math>
    <mtext>&lt;&amp;&gt;</mtext>
</math>
