crates/math-core/tests/snapshots/conversion_test__text_nested.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{ \\text{a}}"
---
<math>
    <mrow>
        <mtext> </mtext>
        <mtext>a</mtext>
    </mrow>
</math>
