crates/math-core/tests/snapshots/conversion_test__text_nested_it.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{ \\textit{a}}"
---
<math>
    <mrow>
        <mtext> </mtext>
        <mtext><i>a</i></mtext>
    </mrow>
</math>
